--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-webpack-template",
+  "name": "express-static-upload",
   "version": "1.0.0",
-  "description": "My go-to template for new React projects",
+  "description": "app built to explore how uploading and deleting files work w/ Express static files",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,15 +13,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/grantkang/react-webpack-template.git"
+    "url": "git+https://github.com/grantkang/express-static-upload.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/grantkang/react-webpack-template/issues"
+    "url": "https://github.com/grantkang/express-static-upload/issues"
   },
-  "homepage": "https://github.com/grantkang/react-webpack-template#readme",
+  "homepage": "https://github.com/grantkang/express-static-upload#readme",
   "nodemonConfig": {
     "watch": [
       "server/"
