--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
+    "@material-ui/core": "4.11.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "react": "16.13.1",
